--- a/app/src/app/authors/authors.component.html
+++ b/app/src/app/authors/authors.component.html
@@ -10,7 +10,7 @@
     <div class="col author-detail">
       <div class="row d-flex align-items-center">
         <div class="col-3 author-photo">
-          <img src="img/face.jpg" alt="fake img">
+          <img src="../../assets/img/face.jpg" alt="fake img">
         </div>
         <div class="col-9">
           <h3>Douglas Adams</h3>
@@ -25,15 +25,15 @@
       </div>
       <div class="author-books d-flex justify-content-around">
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
       </div>
@@ -41,7 +41,7 @@
     <div class="col author-detail">
       <div class="row d-flex align-items-center">
         <div class="col-3 author-photo">
-          <img src="img/face.jpg" alt="fake img">
+          <img src="../../assets/img/face.jpg" alt="fake img">
         </div>
         <div class="col-9">
           <h3>Douglas Adams</h3>
@@ -56,15 +56,15 @@
       </div>
       <div class="author-books d-flex justify-content-around">
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
       </div>
@@ -72,7 +72,7 @@
     <div class="col author-detail">
       <div class="row d-flex align-items-center">
         <div class="col-3 author-photo">
-          <img src="img/face.jpg" alt="fake img">
+          <img src="../../assets/img/face.jpg" alt="fake img">
         </div>
         <div class="col-9">
           <h3>Douglas Adams</h3>
@@ -87,15 +87,15 @@
       </div>
       <div class="author-books d-flex justify-content-around">
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
       </div>
@@ -103,7 +103,7 @@
     <div class="col author-detail">
       <div class="row d-flex align-items-center">
         <div class="col-3 author-photo">
-          <img src="img/face.jpg" alt="fake img">
+          <img src="../../assets/img/face.jpg" alt="fake img">
         </div>
         <div class="col-9">
           <h3>Douglas Adams</h3>
@@ -118,15 +118,15 @@
       </div>
       <div class="author-books d-flex justify-content-around">
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
       </div>
@@ -134,7 +134,7 @@
     <div class="col author-detail">
       <div class="row d-flex align-items-center">
         <div class="col-3 author-photo">
-          <img src="img/face.jpg" alt="fake img">
+          <img src="../../assets/img/face.jpg" alt="fake img">
         </div>
         <div class="col-9">
           <h3>Douglas Adams</h3>
@@ -149,15 +149,15 @@
       </div>
       <div class="author-books d-flex justify-content-around">
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
       </div>
@@ -165,7 +165,7 @@
     <div class="col author-detail">
       <div class="row d-flex align-items-center">
         <div class="col-3 author-photo">
-          <img src="img/face.jpg" alt="fake img">
+          <img src="../../assets/img/face.jpg" alt="fake img">
         </div>
         <div class="col-9">
           <h3>Douglas Adams</h3>
@@ -180,15 +180,15 @@
       </div>
       <div class="author-books d-flex justify-content-around">
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
         <div>
-          <img src="img/book.jpg" alt="fake img">
+          <img src="../../assets/img/book.jpg" alt="fake img">
           <p>Nazov knihy</p>
         </div>
       </div>
