pridanie crud pre fe

--- a/app/src/app/contact/contact.component.html
+++ b/app/src/app/contact/contact.component.html
@@ -8,22 +8,23 @@
     <div class="container">
       <div class="mb-4 contact-form">
         <p class="text-center w-responsive mx-auto mb-5">
-          Ak máte akékoľvek otázky neváhajte nás kontaktovať pomocou formulára nižšie. Náš tím Vám odpovie do niekoľkých hodín.
+          Ak máte akékoľvek otázky neváhajte nás kontaktovať pomocou formulára nižšie. Náš tím Vám odpovie do niekoľkých
+          hodín.
         </p>
 
-        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+        <form action="mail.php" id="contact-form" method="POST" name="contact-form">
           <div class="row">
 
             <div class="col-md-6">
               <div class="md-form mb-0">
-                <label for="name" class="">Meno</label>
-                <input type="text" id="name" name="name" class="form-control">
+                <label class="" for="name">Meno</label>
+                <input class="form-control" id="name" name="name" type="text">
               </div>
             </div>
             <div class="col-md-6">
               <div class="md-form mb-0">
-                <label for="email" class="">Email</label>
-                <input type="text" id="email" name="email" class="form-control">
+                <label class="" for="email">Email</label>
+                <input class="form-control" id="email" name="email" type="text">
               </div>
             </div>
 
@@ -31,8 +32,8 @@
           <div class="row">
             <div class="col-md-12">
               <div class="md-form mb-0">
-                <label for="subject" class="">Predmet</label>
-                <input type="text" id="subject" name="subject" class="form-control">
+                <label class="" for="subject">Predmet</label>
+                <input class="form-control" id="subject" name="subject" type="text">
               </div>
             </div>
           </div>
@@ -41,7 +42,7 @@
 
               <div class="md-form">
                 <label for="message">Vaša správa</label>
-                <textarea id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                <textarea class="form-control md-textarea" id="message" name="message" rows="2"></textarea>
               </div>
 
             </div>
@@ -119,7 +120,10 @@
       <h3>
         Kde nás nájdete?
       </h3>
-      <iframe class="shadow" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2613.596953675606!2d18.91097941573835!3d49.07529547930936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4714ff29251cdb8d%3A0x5e71e61b3610650!2zR29ya8OpaG8gNCwgMDM2IDAxIFrDoXR1csSNaWU!5e0!3m2!1sen!2ssk!4v1665909561450!5m2!1sen!2ssk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe allowfullscreen=""
+              class="shadow"
+              height="300" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2613.596953675606!2d18.91097941573835!3d49.07529547930936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4714ff29251cdb8d%3A0x5e71e61b3610650!2zR29ya8OpaG8gNCwgMDM2IDAxIFrDoXR1csSNaWU!5e0!3m2!1sen!2ssk!4v1665909561450!5m2!1sen!2ssk" style="border:0;"
+              width="400"></iframe>
     </div>
   </div>
 </div>
