--- a/app/src/app/authors/authors.component.html
+++ b/app/src/app/authors/authors.component.html
@@ -3,7 +3,7 @@
   <input class="form-control" type="text" placeholder="Search" aria-label="Search">
 </div>
 <div class="administration d-flex justify-content-center">
-  <a class="btn btn-primary" routerLink="new">Nový autor</a>
+  <a class="btn btn-submit" routerLink="new">Nový autor</a>
 </div>
 <div class="container">
   <div class="row row-cols-1 row-cols-md-2 g-5">
