--- a/app/src/app/new-author/new-author.component.html
+++ b/app/src/app/new-author/new-author.component.html
@@ -30,8 +30,10 @@
 
       </div>
     </div>
-    <button type="submit" class="text-center text-md-left btn-submit">
-      Odoslať
-    </button>
+    <div class="d-flex justify-content-end">
+      <button type="submit" class="text-center text-md-left btn-submit">
+        Odoslať
+      </button>
+    </div>
   </form>
 </div>
