book crud created

--- a/app/src/app/books/books.component.html
+++ b/app/src/app/books/books.component.html
@@ -1,1 +1,55 @@
-<p>books works!</p>
+<div class="search d-flex justify-content-around">
+  <h1>Knihy</h1>
+  <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+</div>
+<div class="administration d-flex justify-content-center">
+  <a class="btn btn-submit" routerLink="new">Nová kniha</a>
+</div>
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-2 g-5">
+    <div *ngFor="let book of books" class="col author-detail">
+      <div class="row d-flex align-items-center">
+        <div class="col-3 author-photo">
+          <img src="../../assets/img/face.jpg" alt="fake img">
+        </div>
+        <div class="col-9">
+          <h3 class="cursor-pointer" [routerLink]="[book.id, 'detail']">{{book.title}}</h3>
+          <p>
+            {{cutString(book.info)}}
+            <a [routerLink]="[book.id, 'detail']">
+              viac
+            </a>
+          </p>
+        </div>
+      </div>
+      <div class="admin_buttons d-flex justify-content-end">
+        <a class="author_icon" [routerLink]="[book.id, 'edit']"><i class="bi bi-pencil-fill"></i></a>
+        <a class="author_icon" (click)="delete(book)"><i class="bi bi-trash-fill"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <li class="page-item disabled">
+        <a class="page-link" href="#" tabindex="-1">&laquo;</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">&raquo;</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="quote">
+    <h4>
+      „Na ty, kteří jsou jiní, číhá nebezpečí za každým rohem. A co byla naše rodina - já s křídly,
+      Henry s němým jazykem a matka se zlomeným srdcem - než skupinka podivných bytostí?"
+    </h4>
+    <p>
+      Leslye Walton
+    </p>
+  </div>
+</div>
