--- a/app/src/app/books/books.component.css
+++ b/app/src/app/books/books.component.css
@@ -95,3 +95,33 @@ body {
 .btn-submit:hover {
   background-color: var(--pink);
 }
+
+.reservation-info {
+  background-color: var(--red);
+  padding: .4rem;
+  text-align: center;
+}
+
+.reservation-info a {
+  text-decoration: none;
+  color: var(--natural);
+}
+
+.reservation-info a span {
+  color: var(--brown);
+  font-weight: bold;
+}
+
+.author-card h4 a {
+  color: var(--natural);
+  background-color: var(--gray);
+  font-size: 1rem;
+  padding: .2rem;
+  border-radius: .2rem;
+  margin-right: .5rem;
+  transition: .5s;
+}
+
+.author-card h4 a:hover {
+  background-color: var(--brown);
+}
