--- a/app/src/app/index-page/index-page.component.html
+++ b/app/src/app/index-page/index-page.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="start-reservation">
-  <a href="rezervacia.html">
+  <a routerLink="../books">
     Rezervuj si knihu
   </a>
 </div>
