--- a/app/src/app/edit-book/edit-book.component.html
+++ b/app/src/app/edit-book/edit-book.component.html
@@ -1,5 +1,5 @@
 <h2 class="text-center text-md-left">
-  Vytvorenie novej knihy
+  Editácia knihy
 </h2>
 <div class="contact-form d-flex justify-content-center">
   <form (submit)="submit(form)"
@@ -16,7 +16,7 @@
       <div class="col-md-12">
         <div class="md-form mb-0">
           <label class="" for="isbn">Isbn</label>
-          <input class="form-control" required="required" pattern="[a-zA-Z0-9_-\.]{1,30}" id="isbn" name="isbn" type="text"  [(ngModel)]="book.isbn">
+          <input class="form-control" required="required" id="isbn" name="isbn" type="text"  [(ngModel)]="book.isbn">
         </div>
       </div>
     </div>
@@ -38,6 +38,14 @@
     </div>
     <div class="row">
       <div class="col-md-12">
+        <div class="md-form mb-0">
+          <label class="" for="pages">Počet dostupných</label>
+          <input class="form-control" required="required" pattern="[0-9]{1,5}" id="available" name="pages" type="number"  [(ngModel)]="book.available">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
 
         <div class="md-form">
           <label for="info">Info o knihe</label>
@@ -49,9 +57,9 @@
         <div class="col-md-12">
           <div class="md-form mb-0">
             <label for="priority">Autor</label>
-            <span *ngFor="let author of book.authors">
+            <span class="name" *ngFor="let author of book.authors">
                 {{author.name}}
-              <span (click)="removeFromSelectedAuthors(author)">
+              <span class="remove" (click)="removeFromSelectedAuthors(author)">
                 x
               </span>
             </span>
@@ -70,9 +78,9 @@
       <div class="col-md-12">
         <div class="md-form mb-0">
           <label for="genres">Žánre</label>
-          <span *ngFor="let genre of book.bookGenres">
+          <span class="name" *ngFor="let genre of book.bookGenres">
                 {{genre.name}}
-            <span (click)="removeFromSelectedGenres(genre)">
+            <span class="remove" (click)="removeFromSelectedGenres(genre)">
                 x
               </span>
             </span>
