--- a/app/src/app/contacts-manage/contacts-manage.component.html
+++ b/app/src/app/contacts-manage/contacts-manage.component.html
@@ -12,7 +12,7 @@
     <div *ngFor="let contact of contacts" >
       <div *ngIf="allOptions || !contact.solved" [ngClass]="{'solved': contact.solved}"
            class="row d-flex justify-content-center align-items-center contact-main">
-        <div class="col-10">
+        <div class="col-10 contact-manage">
           <h4>
             {{contact.name}}
             <span>
