--- a/app/src/app/edit-author/edit-author.component.html
+++ b/app/src/app/edit-author/edit-author.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-12">
         <div class="md-form mb-0">
           <label class="" for="name">Meno</label>
-          <input class="form-control" required="required" pattern="[A-Za-z]{1,30}" id="name" name="name" type="text" [(ngModel)]="author.name">
+          <input class="form-control" required="required" id="name" name="name" type="text" [(ngModel)]="author.name">
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
       <div class="col-md-12">
         <div class="md-form mb-0">
           <label class="" for="lastName">Priezvisko</label>
-          <input class="form-control" required="required" pattern="[A-Za-z]{1,30}" id="lastName" name="lastName" type="text"  [(ngModel)]="author.lastName">
+          <input class="form-control" required="required" id="lastName" name="lastName" type="text"  [(ngModel)]="author.lastName">
         </div>
       </div>
     </div>
