--- a/app/src/app/edit-book/edit-book.component.html
+++ b/app/src/app/edit-book/edit-book.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-12">
         <div class="md-form mb-0">
           <label for="title">Názov</label>
-          <input class="form-control" required="required" pattern="[A-Za-z0-9\s]{1,30}" id="title" name="title" type="text" [(ngModel)]="book.title">
+          <input class="form-control" required="required" id="title" name="title" type="text" [(ngModel)]="book.title">
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
       <div class="col-md-12">
         <div class="md-form mb-0">
           <label class="" for="pages">Počet strán</label>
-          <input class="form-control" required="required" pattern="[0-9]{1,5}" id="pages" name="pages" type="number"  [(ngModel)]="book.numberOfPages">
+          <input class="form-control" required="required" pattern="[0-9]{1,5}" min="1" id="pages" name="pages" type="number"  [(ngModel)]="book.numberOfPages">
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
       <div class="col-md-12">
         <div class="md-form mb-0">
           <label class="" for="pages">Počet dostupných</label>
-          <input class="form-control" required="required" pattern="[0-9]{1,5}" id="available" name="pages" type="number"  [(ngModel)]="book.available">
+          <input class="form-control" required="required" pattern="[0-9]{1,5}" min="0" id="available" name="pages" type="number"  [(ngModel)]="book.available">
         </div>
       </div>
     </div>
